# ai-app

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  index.html  manifest.json  package-lock.json  package.json  server.js  vite.config.ts
.github/workflows/: build-apk.yml
app/: manifest.json
public/: index.html
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mobile.rs
src/components/Layout/: ResponsiveLayout.css  ResponsiveLayout.tsx
src/config/: api.ts
src/contexts/: AuthContext.tsx
src/hooks/: useResponsive.ts  useVehicle.ts
src/pages/: HomePage.tsx  LoginPage.tsx  MallPage.tsx  ProfilePage.tsx  ServicePage.tsx  VehiclePage.tsx
src/services/: vehicleApi.ts
src/store/: index.ts
src/store/slices/: navigationSlice.ts  vehicleSlice.ts
src/styles/: index.css
